--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.6
   hooks_riverpod: ^1.0.4
+  decimal: ^2.3.0
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
